php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #42151 __destruct functions not called after catching a SoapFault exception
Submitted: 2007-07-30 22:24 UTC Modified: 2007-08-01 10:40 UTC
Votes:1
Avg. Score:5.0 ± 0.0
Reproduced:1 of 1 (100.0%)
Same Version:0 (0.0%)
Same OS:0 (0.0%)
From: mattsch at gmail dot com Assigned: dmitry (profile)
Status: Closed Package: SOAP related
PHP Version: 5.2.3 OS: Gentoo Linux
Private report: No CVE-ID: None
 [2007-07-30 22:24 UTC] mattsch at gmail dot com
Description:
------------
All __destruct functions of all objects in memory are not called if a SoapFault exception is thrown and caught.

Reproduce code:
---------------
<?php
class foo {
	function __construct(){
		$foo = new SoapClient('http://php.net/problem_file.wsdl');
	}
	function __destruct(){
		echo 'I never get executed.' . "\n";
	}
}
class bar {
	function __destruct(){
		echo 'I don\'t get executed either.' . "\n";
	}
}
try {
	$bar = new bar();
	$foo = new foo();
} catch (Exception $e){
	echo $e->getMessage() . "\n";
}
?>

Expected result:
----------------
SOAP-ERROR: Parsing WSDL: Couldn't load from 'http://php.net/problem_file.wsdl'
I never get executed.
I don't get executed either.

Actual result:
--------------
SOAP-ERROR: Parsing WSDL: Couldn't load from 'http://php.net/problem_file.wsdl'

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2007-08-01 10:40 UTC] dmitry@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Sun Sep 27 02:00:01 2026 UTC