Fixed bug #42151 (__destruct functions not called after catching a SoapFault exception)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@240558 c90b9560-bf6c-de11-be94-00142212c4b1